# CMeles

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMeles.cpp
docs/: guide_for_init_dev_env.md
src/: CMakeLists.txt
tests/: CMakeLists.txt  verify_env.cpp  verify_env.sh
